[package]
name          = "grug-client"
description   = "Rust client for interacting with Grug via Tendermint RPC"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[dependencies]
anyhow         = { workspace = true }
grug-jmt       = { path = "../../crates/jellyfish-merkle" }
grug-types     = { path = "../../crates/types" }
serde          = { workspace = true }
tendermint     = { workspace = true }
tendermint-rpc = { workspace = true, features = ["http-client"] }
