[package]
name          = "grug-crypto"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[dependencies]
digest        = { workspace = true }
ed25519-dalek = { workspace = true, features = ["batch"] }
k256          = { workspace = true }
p256          = { workspace = true }
signature     = { workspace = true }
thiserror     = { workspace = true }
sha2          = { workspace = true }
sha3          = { workspace = true }

[dev-dependencies]
rand       = { workspace = true }
sha2       = { workspace = true }
serde      = { workspace = true, default-features = false, features = ["derive", "alloc"] }
serde_json = { workspace = true }
hex        = { workspace = true, features = ["serde"] }
