[package]
name          = "grug-crypto"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[dependencies]
blake2        = { workspace = true }
blake3        = { workspace = true }
digest        = { workspace = true }
ed25519-dalek = { workspace = true, features = ["batch", "digest"] }
k256          = { workspace = true }
p256          = { workspace = true }
sha2          = { workspace = true }
sha3          = { workspace = true }
signature     = { workspace = true }
thiserror     = { workspace = true }

[dev-dependencies]
criterion   = { workspace = true }
grug-types  = { path = "../types" }
hex         = { workspace = true, features = ["serde"] }
hex-literal = { workspace = true }
rand        = { workspace = true }
serde       = { workspace = true, features = ["derive", "alloc"] }
sha2        = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false
