[package]
name          = "cw-db-disk"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[dependencies]
cw-app    = { path = "../app" }
cw-merkle = { path = "../merkle" }
cw-types  = { path = "../types" }
rocksdb   = { workspace = true }
tempfile  = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
