[package]
name          = "cw-db"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[dependencies]
cw-jmt    = { path = "../jellyfish-merkle" }
cw-std    = { path = "../std" }
cw-vm     = { path = "../vm" }
rocksdb   = { workspace = true }
thiserror = { workspace = true }
