[package]
name          = "grug-ffi"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[dependencies]
grug-types = { path = "../types" }
serde      = { workspace = true }

[dev-dependencies]
