[package]
name          = "dango-genesis"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[dependencies]
anyhow      = { workspace = true }
dango-types = { path = "../dango" }
grug        = { path = "../std" }
serde       = { workspace = true }

[dev-dependencies]
home = { workspace = true }
k256 = { workspace = true }
