[package]
name          = "cw-jellyfish-merkle"
description   = "A minimalist implementation of Jellyfish Merkle tree (JMT)"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[features]
default = ["fuzzing"]
fuzzing = []

[dependencies]
cw-std    = { path = "../std" }
sha2      = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow      = { workspace = true }
hex-literal = { workspace = true }
proptest    = { workspace = true }
rand        = { workspace = true }
test-case   = { workspace = true }
