[package]
name          = "grug-jmt"
description   = "A minimalist implementation of Jellyfish Merkle tree (JMT)"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[features]
default = []
# Include fuzzing test, which can take a long time to run.
fuzzing = []

[dependencies]
borsh        = { workspace = true, features = ["derive", "de_strict_order"] }
grug-storage = { path = "../storage" }
grug-types   = { path = "../types" }
serde        = { workspace = true, features = ["derive"] }
thiserror    = { workspace = true }

[dev-dependencies]
anyhow      = { workspace = true }
hex-literal = { workspace = true }
proptest    = { workspace = true }
rand        = { workspace = true }
test-case   = { workspace = true }
