[package]
name          = "grug-jmt"
description   = "A minimalist implementation of Jellyfish Merkle tree (JMT)"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[features]
default = ["ics23"]
# Include fuzzing test, which can take a long time to run.
fuzzing = []
# Include a method to generate ICS-23 compatible proofs.
ics23 = ["dep:ics23"]

[dependencies]
borsh        = { workspace = true, features = ["derive", "de_strict_order"] }
grug-storage = { workspace = true }
grug-types   = { workspace = true }
ics23        = { workspace = true, optional = true }
serde        = { workspace = true, features = ["derive"] }
thiserror    = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
proptest    = { workspace = true }
rand        = { workspace = true }
test-case   = { workspace = true }
