[package]
name          = "grug-math"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[dependencies]
bnum      = { workspace = true, features = ["borsh"] }
borsh     = { workspace = true, features = ["derive", "de_strict_order"] }
serde     = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
