[package]
name          = "cw-merkle"
description   = "A minimalist implementation of Jellyfish Merkle tree (JMT)"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[features]
default = []
# if enabled, a fuzzing test is included, which can take a long time to run
fuzzing = []

[dependencies]
borsh      = { workspace = true, features = ["derive", "de_strict_order"] }
cw-storage = { path = "../storage" }
cw-types   = { path = "../types" }
serde      = { workspace = true, features = ["derive"] }
sha2       = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
anyhow       = { workspace = true }
cw-testing   = { path = "../testing" }
hex-literal  = { workspace = true }
proptest     = { workspace = true }
rand         = { workspace = true }
test-case    = { workspace = true }
tracing-test = { workspace = true }
