[package]
name    = "cw-sdk"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow          = { workspace = true }
cw-sdk-derive   = { path = "./derive" }
hex             = { workspace = true }
serde           = { workspace = true, features = ["derive"] }
serde-json-wasm = { workspace = true }
