[package]
name          = "grug"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[dependencies]
borsh        = { workspace = true, features = ["derive", "de_strict_order"] }
grug-macros  = { path = "../macros" }
grug-storage = { path = "../storage" }
grug-testing = { path = "../testing" }
grug-types   = { path = "../types" }
grug-wasm    = { path = "../wasm" }
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true }
serde_with   = { workspace = true }

[dev-dependencies]
