[package]
name          = "grug"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[dependencies]
borsh        = { workspace = true, features = ["derive", "de_strict_order"] }
grug-macros  = { path = "../macros" }
grug-storage = { path = "../storage" }
grug-types   = { path = "../types" }
grug-ffi     = { path = "../ffi" }
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true }
serde_with   = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
grug-testing = { path = "../testing" }

[dev-dependencies]
