[package]
name          = "grug-storage"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[dependencies]
borsh      = { workspace = true }
grug-types = { path = "../types" }
prost      = { workspace = true }

[dev-dependencies]
rand      = { workspace = true }
test-case  = { workspace = true }