[package]
name          = "grug-storage"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[dependencies]
grug-types = { path = "../types" }

[dev-dependencies]
borsh = { workspace = true, features = ["derive", "de_strict_order"] }
