[package]
name          = "grug-testing"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[dependencies]
anyhow             = { workspace = true }
grug-app           = { path = "../app", features = ["tracing"] }
grug-account       = { path = "../../contracts/account", features = ["library"] }
grug-bank          = { path = "../../contracts/bank", features = ["library"] }
grug-crypto        = { path = "../crypto" }
grug-db-memory     = { path = "../db/memory" }
grug-taxman        = { path = "../../contracts/taxman", features = ["library"] }
grug-types         = { path = "../types" }
grug-vm-rust       = { path = "../vm/rust" }
k256               = { workspace = true }
rand               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
borsh         = { workspace = true, features = ["derive", "de_strict_order"] }
grug-macros   = { path = "../macros" }
grug-storage  = { path = "../storage" }
serde         = { workspace = true }
test-case     = { workspace = true }
