[package]
name          = "grug-testing"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[dependencies]
anyhow             = { workspace = true }
grug-app           = { path = "../app", features = ["tracing"] }
grug-crypto        = { path = "../crypto" }
grug-db-memory     = { path = "../db/memory" }
grug-math          = { path = "../math" }
grug-mock-account  = { path = "../../contracts/account", features = ["library"] }
grug-mock-bank     = { path = "../../contracts/bank", features = ["library"] }
grug-mock-taxman   = { path = "../../contracts/taxman", features = ["library"] }
grug-types         = { path = "../types" }
grug-vm-rust       = { path = "../vm/rust" }
k256               = { workspace = true }
rand               = { workspace = true }
serde              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
borsh        = { workspace = true, features = ["derive", "de_strict_order"] }
grug-storage = { path = "../storage" }
test-case    = { workspace = true }
