[package]
name          = "grug-types"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[dependencies]
bnum          = { workspace = true, features = ["borsh"] }
borsh         = { workspace = true, features = ["derive", "de_strict_order"] }
data-encoding = { workspace = true }
hex           = { workspace = true }
hex-literal   = { workspace = true }
dyn-clone     = { workspace = true }
forward_ref   = { workspace = true }
prost         = { workspace = true }
serde         = { workspace = true, features = ["derive"] }
serde_json    = { workspace = true }
serde_with    = { workspace = true }
sha2          = { workspace = true }
thiserror     = { workspace = true }

# The crypto crate is only used for testing (in `MockApi`), which isn't used in
# Wasm builds, and not Wasm-compatible.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
grug-crypto = { path = "../crypto" }

[dev-dependencies]
proptest  = { workspace = true }
test-case = { workspace = true }
