[package]
name          = "grug-types"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[features]
# Include method to cast an `Addr` to ERC-55 checksum string, or verify such a
# checksum.
erc55 = ["dep:sha3"]

[dependencies]
bnum          = { workspace = true, features = ["borsh"] }
borsh         = { workspace = true, features = ["derive", "de_strict_order"] }
data-encoding = { workspace = true }
digest        = { workspace = true }
hex           = { workspace = true }
hex-literal   = { workspace = true }
dyn-clone     = { workspace = true }
forward_ref   = { workspace = true }
paste         = { workspace = true }
prost         = { workspace = true }
ripemd        = { workspace = true }
serde         = { workspace = true, features = ["derive"] }
serde_json    = { workspace = true }
serde_with    = { workspace = true }
sha2          = { workspace = true }
sha3          = { workspace = true, optional = true }
thiserror     = { workspace = true }

[dev-dependencies]
proptest  = { workspace = true }
test-case = { workspace = true }
