[package]
name          = "cw-utils"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[dependencies]
anyhow = { workspace = true }
cw-std = { path = "../std" }
serde  = { workspace = true }

[dev-dependencies]
cw-account = { path = "../../contracts/account" }
cw-bank    = { path = "../../contracts/bank" }
cw-keyring = { path = "../keyring" }
home       = { workspace = true }
serde_json = { workspace = true }
