[package]
name          = "cw-vm-rust"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[dependencies]
cw-app    = { path = "../app" }
cw-crypto = { path = "../crypto" }
cw-std    = { path = "../std" }

[dev-dependencies]
