[package]
name          = "cw-vm-wasm"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[dependencies]
cw-app        = { path = "../app" }
cw-crypto     = { path = "../crypto" }
cw-std        = { path = "../std" }
data-encoding = { workspace = true }
serde         = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
wasmer        = { workspace = true, features = ["singlepass"] }

[dev-dependencies]
anyhow             = { workspace = true }
cfg-if             = { workspace = true }
cw-bank            = { path = "../../contracts/bank", features = ["library"] }
lazy_static        = { workspace = true }
serde_json         = { workspace = true }
tracing-subscriber = { workspace = true }
