[package]
name    = "cw-vm"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
cw-crypto     = { path = "../crypto" }
cw-db         = { path = "../db" }
cw-std        = { path = "../std" }
data-encoding = { workspace = true }
serde         = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
wasmer        = { workspace = true, features = ["singlepass"] }

[dev-dependencies]
anyhow             = { workspace = true }
cw-bank            = { path = "../../contracts/bank" }
serde_json         = { workspace = true }
tracing-subscriber = { workspace = true }
