[package]
name    = "cw-vm"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
cw-crypto     = { path = "../crypto" }
cw-db         = { path = "../db" }
cw-std        = { path = "../std" }
data-encoding = { workspace = true }
serde         = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
wasmer        = { workspace = true, features = ["singlepass"] }

[dev-dependencies]
anyhow             = { workspace = true }
cfg-if             = { workspace = true }
cw-bank            = { path = "../../contracts/bank" }
lazy_static        = { workspace = true }
serde_json         = { workspace = true }
tracing-subscriber = { workspace = true }
